--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Free eBook Library</title>
+    <title>eBook Library | A Divinemonk creation!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
