--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Free eBook Library</h1>
+        <h1>eBook Library</h1>
+        <h3>A <i>Divinemonk</i> creation!</h3>
         
         <div class="search-container">
             <input type="text" id="searchInput" class="search-input" placeholder="Search for a book...">
