--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
             margin: 0 auto;
             padding: 20px;
         }
+
+        h1 {
+            text-align: center;
+            font-family: Helvetica, Geneva, Verdana, sans-serif
+        }
         
         .book {
             display: flex;
