--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>eBook Library | A Divinemonk creation!</title>
+    <title>eBook Library</title>
     <style>
         body {
             margin: 0;
@@ -24,6 +24,7 @@
             background-color: #f2f2f2;
             padding: 10px;
             margin-bottom: 20px;
+            text-align: center;
         }
 
         .search-input {
@@ -52,6 +53,7 @@
 
         .book {
             width: 200px;
+            height: 250px;
             margin: 10px;
             padding: 10px;
             background-color: #f9f9f9;
@@ -113,7 +115,7 @@
         </div>
 
         <div class="footer">
-            A Divinemonk creation<br>
+            A Divinemonk creation!<br>
             Made with <span class="heart">&#10084;</span>
         </div>
     </div>
