--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
         .book img {
             max-width: 100%;
-            height: auto;
+            height: 150px;
+            object-fit: cover;
         }
 
         .book-title {
@@ -115,8 +116,8 @@
         </div>
 
         <div class="footer">
-            A Divinemonk creation!<br>
-            Made with <span class="heart">&#10084;</span>
+            <a src="https://github.com/Divinemonk/">A Divinemonk creation!</a> |
+            <a src="https://github.com/Divinemonk/ebooklibrary">Made with <span class="heart">&#10084;</span></a>
         </div>
     </div>
 
