--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .book {
             width: 200px;
-            height: 250px;
+            height: 450px;
             margin: 10px;
             padding: 10px;
             background-color: #f9f9f9;
@@ -63,7 +63,7 @@
 
         .book img {
             max-width: 100%;
-            height: 150px;
+            height: 250px;
             object-fit: cover;
         }
 
@@ -116,8 +116,8 @@
         </div>
 
         <div class="footer">
-            <a src="https://github.com/Divinemonk/">A Divinemonk creation!</a> |
             <a src="https://github.com/Divinemonk/ebooklibrary">Made with <span class="heart">&#10084;</span></a>
+            <a src="https://github.com/Divinemonk/">A Divinemonk creation!</a>
         </div>
     </div>
 
