--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .book {
             width: 200px;
-            height: 450px;
+            height: 250px;
             margin: 10px;
             padding: 10px;
             background-color: #f9f9f9;
@@ -63,8 +63,20 @@
 
         .book img {
             max-width: 100%;
-            height: 250px;
+            height: 150px;
             object-fit: cover;
+            background-color: #eee;
+            padding: 10px;
+        }
+
+        .book-details {
+            background-color: #f5f5f5;
+            padding: 10px;
+        }
+
+        .book-download {
+            background-color: #f2f2f2;
+            padding: 10px;
         }
 
         .book-title {
@@ -80,7 +92,7 @@
         .book-details a {
             display: block;
             margin-top: 10px;
-            background-color: #4CAF50;
+            background-color: #ccc;
             color: #fff;
             text-decoration: none;
             padding: 5px;
@@ -88,8 +100,9 @@
         }
 
         .book-details a:hover {
-            background-color: #45a049;
+            background-color: #bbb;
         }
+
 
         .footer {
             text-align: center;
