--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .book {
             width: 200px;
-            height: 250px;
+            height: 400px;
             margin: 10px;
             padding: 10px;
             background-color: #f9f9f9;
@@ -63,20 +63,8 @@
 
         .book img {
             max-width: 100%;
-            height: 150px;
+            height: 250px;
             object-fit: cover;
-            background-color: #eee;
-            padding: 10px;
-        }
-
-        .book-details {
-            background-color: #f5f5f5;
-            padding: 10px;
-        }
-
-        .book-download {
-            background-color: #f2f2f2;
-            padding: 10px;
         }
 
         .book-title {
@@ -92,7 +80,7 @@
         .book-details a {
             display: block;
             margin-top: 10px;
-            background-color: #ccc;
+            background-color: #4CAF50;
             color: #fff;
             text-decoration: none;
             padding: 5px;
@@ -100,9 +88,8 @@
         }
 
         .book-details a:hover {
-            background-color: #bbb;
+            background-color: #45a049;
         }
-
 
         .footer {
             text-align: center;
