--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         .book {
             width: 200px;
-            height: 380px;
+            height: 370px;
             margin: 10px;
             padding: 10px;
             background-color: #f9f9f9;
@@ -62,6 +62,7 @@
         }
 
         .book img {
+            padding-top: 5px;
             max-width: 100%;
             height: 250px;
             object-fit: cover;
@@ -128,12 +129,15 @@
         // Define the path to the JSON file
         var jsonFile = 'database.json';
 
+        // Declare the books variable outside of the xhr.onload function
+        var books;
+
         // Send a GET request to fetch the JSON data
         xhr.open('GET', jsonFile, true);
         xhr.onload = function() {
             if (xhr.status === 200) {
                 var data = JSON.parse(xhr.responseText);
-                var books = data.books; // Store the fetched book data in the books variable
+                books = data.books; // Assign the fetched book data to the books variable
                 displayBooks(data.books);
             } else {
                 console.log('Error fetching book data. Status code:', xhr.status);
