--- a/index.html
+++ b/index.html
@@ -25,6 +25,37 @@
             padding: 10px;
             margin-bottom: 20px;
             text-align: center;
+            position: relative;
+        }
+
+        .search-container::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.1);
+            z-index: -1;
+        }
+
+        .pagination {
+            background-color: #f2f2f2;
+            padding: 10px;
+            margin-top: 20px;
+            text-align: center;
+            position: relative;
+        }
+
+        .pagination::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0, 0, 0, 0.1);
+            z-index: -1;
         }
 
         .search-input {
