--- a/index.html
+++ b/index.html
@@ -132,24 +132,41 @@
             background-color: #45a049;
         }
 
-        .tag-container {
-            margin-top: 30px;
+        .filter-container {
+            margin-bottom: 20px;
+            text-align: center;
         }
 
-        .tag-container h3 {
-            margin-bottom: 10px;
+        .filter-option {
+            display: inline-block;
+            margin-right: 10px;
+            padding: 5px 10px;
+            background-color: #f2f2f2;
+            color: #888;
+            cursor: pointer;
+        }
+
+        .filter-option:hover,
+        .filter-option.active {
+            background-color: #4CAF50;
+            color: #fff;
+        }
+
+        .tag-container {
+            text-align: center;
         }
 
         .tag {
             display: inline-block;
+            margin-right: 10px;
             padding: 5px 10px;
-            margin-right: 5px;
             background-color: #f2f2f2;
-            color: #333;
+            color: #888;
             cursor: pointer;
         }
 
-        .tag.active {
+        .tag:hover,
+            .tag.active {
             background-color: #4CAF50;
             color: #fff;
         }
