--- a/index.html
+++ b/index.html
@@ -293,47 +293,48 @@
 
         // Display books based on the current page and filtered book array
         function displayBooks(page, booksArray) {
-        var bookListContainer = document.getElementById('bookList');
-        bookListContainer.innerHTML = '';
+            var bookListContainer = document.getElementById('bookList');
+            bookListContainer.innerHTML = '';
 
-        var startIndex = (page - 1) * booksPerPage;
-        var endIndex = startIndex + booksPerPage;
+            var startIndex = (page - 1) * booksPerPage;
+            var endIndex = Math.min(startIndex + booksPerPage, booksArray.length);
 
-        for (var i = startIndex; i < endIndex && i < booksArray.length; i++) {
-            var book = booksArray[i];
+            for (var i = startIndex; i < endIndex; i++) {
+                var book = booksArray[i];
 
-            var bookItem = document.createElement('div');
-            bookItem.className = 'book';
+                var bookItem = document.createElement('div');
+                bookItem.className = 'book';
 
-            var bookCover = document.createElement('img');
-            bookCover.src = book.cover;
+                var bookCover = document.createElement('img');
+                bookCover.src = book.cover;
 
-            var bookDetails = document.createElement('div');
-            bookDetails.className = 'book-details';
+                var bookDetails = document.createElement('div');
+                bookDetails.className = 'book-details';
 
-            var bookTitle = document.createElement('h2');
-            bookTitle.className = 'book-title';
-            bookTitle.innerText = book.title;
+                var bookTitle = document.createElement('h2');
+                bookTitle.className = 'book-title';
+                bookTitle.innerText = book.title;
 
-            var bookAuthor = document.createElement('p');
-            bookAuthor.className = 'book-author';
-            bookAuthor.innerText = 'By ' + book.author;
+                var bookAuthor = document.createElement('p');
+                bookAuthor.className = 'book-author';
+                bookAuthor.innerText = 'By ' + book.author;
 
-            var downloadButton = document.createElement('a');
-            downloadButton.href = book.downloadLink;
-            downloadButton.innerText = 'Download';
-            downloadButton.target = '_blank';
+                var downloadButton = document.createElement('a');
+                downloadButton.href = book.downloadLink;
+                downloadButton.innerText = 'Download';
+                downloadButton.target = '_blank';
 
-            bookDetails.appendChild(bookTitle);
-            bookDetails.appendChild(bookAuthor);
-            bookDetails.appendChild(downloadButton);
+                bookDetails.appendChild(bookTitle);
+                bookDetails.appendChild(bookAuthor);
+                bookDetails.appendChild(downloadButton);
 
-            bookItem.appendChild(bookCover);
-            bookItem.appendChild(bookDetails);
+                bookItem.appendChild(bookCover);
+                bookItem.appendChild(bookDetails);
 
-            bookListContainer.appendChild(bookItem);
+                bookListContainer.appendChild(bookItem);
+            }
         }
-        }
+
 
 
         // Render pagination
