--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             extractTags();
 
             // Display books and render pagination
-            displayBooks(currentPage);
+            displayBooks(currentPage, books);
             renderPagination();
             renderTags();
         } else {
