--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
             });
 
             tagList = allTags;
+            console.log(tagList)
         }
 
         // Function to render the tags
