--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         h1 {
             text-align: center;
             margin-bottom: 30px;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            font-size: 48px;
+            font-weight: bold;
+            color: #333;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
         .search-container {
@@ -161,7 +168,7 @@
         }
 
         /* Responsive styles */
-        
+
         @media only screen and (max-width: 600px) {
             .container {
                 width: 100%;
