--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
         .tag-container {
             text-align: center;
+            margin-top: 10px;
         }
 
         .tag {
@@ -211,9 +212,6 @@
         <div class="tag-container">
             <span class="tag-label">Tags:</span>
             <div class="tag active" onclick="filterByTag(this)">All</div>
-            <div class="tag" onclick="filterByTag(this)">Adventure</div>
-            <div class="tag" onclick="filterByTag(this)">Fiction</div>
-            <div class="tag" onclick="filterByTag(this)">Mystery</div>
         </div>
 
         <div class="footer">
